Display of Movie List, Changes on models

--- a/BookingWebApplication/wwwroot/css/site.css
+++ b/BookingWebApplication/wwwroot/css/site.css
@@ -1,3 +1,13 @@
+:root {
+    --primary-color: #282828;
+    --secondary-color: #121212;
+    --accent-color: #575757;
+    --light-primary-color: #717171;
+    --light-secondary-color: #8b8b8b;
+
+    --text-color: #E1E1E1;
+}
+
 html {
   font-size: 14px;
 }
@@ -9,14 +19,31 @@ html {
 }
 
 .btn:focus, .btn:active:focus, .btn-link.nav-link:focus, .form-control:focus, .form-check-input:focus {
-  box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #258cfb;
+    box-shadow: 0 0 0 0.1rem white, 0 0 0 0.25rem #6D5D6E;
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
+    color: var(--text-color);
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+    background-color: var(--secondary-color);
+    color: var(--text-color);
+}
+
+.nav-item {
+    color: var(--text-color);
+}
+
+header {
+    background-color: var(--primary-color);
+    color: var(--text-color);
+}
+
+footer {
+    background-color: var(--primary-color);
+    color: var(--text-color);
 }
