--- a/BookingWebApplication/Views/Account/Create.cshtml
+++ b/BookingWebApplication/Views/Account/Create.cshtml
@@ -27,11 +27,11 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="CreateTime" class="control-label"></label>
                 <input asp-for="CreateTime" class="form-control" />
                 <span asp-validation-for="CreateTime" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="Salt" class="control-label"></label>
                 <input asp-for="Salt" class="form-control" />
