--- a/BookingWebApplication/Views/Account/Login.cshtml
+++ b/BookingWebApplication/Views/Account/Login.cshtml
@@ -1,18 +1,32 @@
 ﻿<!-- Login.cshtml -->
 @model BookingWebApplication.Models.User
 
-<h2>Login</h2>
-@if (ViewBag.Error != null)
-{
-    <p style="color: red;">@ViewBag.Error</p>
-}
+<head>
+    <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
+</head>
 
-<form asp-action="Login" method="post">
-    <label for="Username">Username:</label>
-    <input type="text" name="Username" required />
+<div class="login-title">
+    <h2>Log In</h2>
+</div>
+<div class="login-alert">
+    @if (ViewBag.Error != null)
+    {
+        <div style="color: red;">@ViewBag.Error</div>
+    }
+</div>
 
-    <label for="Password">Password:</label>
-    <input type="password" name="Password" required />
+<div class="login-box">
+    <form asp-action="Login" method="post">
 
-    <button type="submit">Login</button>
-</form>
+        <label for="Username">Username:</label>
+        <input class="login-control form-control" type="text" name="Username" required />
+
+        <label for="Password">Password:</label>
+        <input class="login-control form-control" type="password" name="Password" required />
+
+        <div class="login-buttons-links">
+            <button class="login-button btn btn-secondary" type="submit">Login</button>
+            <a class="register-link" asp-action="Create">Register</a>
+        </div>
+    </form>
+</div>
