--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -20,7 +20,7 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarShared">
-                    <ul class="navbar-nav me-auto mb-2 mb-sm-0">
+                    <ul class="navbar-nav w-100">
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
@@ -29,6 +29,18 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        </li>
+                        <li class="nav-item dropdown ms-auto mb-lg-8">
+                            @{
+                                if (ViewBag.MySession != null)
+                                {
+                                    <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                                }
+                                else
+                                {
+                                    <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Login">Log In</a>
+                                }
+                            }
                         </li>
                     </ul>
                 </div>
