--- a/BookingWebApplication/Views/Account/Login.cshtml
+++ b/BookingWebApplication/Views/Account/Login.cshtml
@@ -18,15 +18,15 @@
 <div class="login-box">
     <form asp-action="Login" method="post">
 
-        <label for="Username">Username:</label>
+        <label for="Username">Username</label>
         <input class="login-control form-control" type="text" name="Username" required />
 
-        <label for="Password">Password:</label>
+        <label for="Password">Password</label>
         <input class="login-control form-control" type="password" name="Password" required />
 
         <div class="login-buttons-links">
             <button class="login-button btn btn-secondary" type="submit">Login</button>
-            <a class="register-link" asp-action="Create">Register</a>
+            <a class="register-link" asp-action="Register">Register</a>
         </div>
     </form>
 </div>
