--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
                             <a class="nav-link" asp-area="" asp-controller="Movie" asp-action="Index">Movies</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                            <a class="nav-link" asp-area="" asp-controller="Cinema" asp-action="Index">Cinemas</a>
                         </li>
                         <li class="nav-item dropdown ms-auto mb-lg-8">
                             @{
