--- a/BookingWebApplication/wwwroot/css/cinema.css
+++ b/BookingWebApplication/wwwroot/css/cinema.css
@@ -27,10 +27,10 @@ body {
     font-size: 1.05em;
     position: relative;
 }
-table.cinema-table td:first-child {
+.cinema-table td:first-child {
     padding: 0;
 }
-table.cinema-table a {
+.cinema-table a {
     font-size: 3em;
     position: absolute;
     display: block;
@@ -40,7 +40,7 @@ table.cinema-table a {
     color: var(--secondary-color);
     text-decoration: none;
 }
-table.cinema-table a:hover {
+.cinema-table a:hover {
     background: none;
     color: var(--hover-color);
     text-decoration: none;
