--- a/BookingWebApplication/wwwroot/css/provoles.css
+++ b/BookingWebApplication/wwwroot/css/provoles.css
@@ -10,182 +10,45 @@
     --hover-color: #E1E1E1;
 }
 
-.calendar {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 2em;
-    font-size: 1.1em;
-}
-
-.calendar-table th, .calendar-table td {
-    text-align: center;
-    padding: 10px;
-}
-
-.calendar-radio {
-    padding: 0.5em;
-    -webkit-appearance: none;
-    outline: 0.1em solid #fffc;
-    outline-offset: 0.1em;
-}
-
-.calendar-radio:checked {
-    background: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==) no-repeat center center;
-    background-size: 9px 9px;
-}
-
 .provoles-list {
     margin-bottom: 3em;
+}
+.provoles-table {
+    margin-top: 2em;
 }
 .provoles-table tr {
     border: 2px solid var(--primary-color);
     font-size: 1.05em;
+    position: relative;
+}
+.provoles-table td:first-child
+{
+    padding: 0;
+}
+.provoles-table a {
+    font-size: 3em;
+    position: absolute;
+    display: block;
+    top: 0;
+    width: 100%;
+    max-width: 100%;
+    color: var(--secondary-color);
+    text-decoration: none;
+}
+.provoles-table a:hover {
+    background: none;
+    color: var(--hover-color);
+    text-decoration: none;
+}
+.provoles-table-row:hover {
+    border: 2px solid var(--primary-color);
+    background: var(--hover-color);
+    color: var(--primary-color);
 }
 .provoles-table th {
     font-size: 1.2em;
-    padding: 0.2em 7em 0.2em 0.5em;
+    padding: 1em 1em;
 }
 .provoles-table td {
-    padding: 1em 7em 1em 0.5em;
-}
-.provoles-table-row {
-    cursor: pointer;
-}
-.provoles-table-row:hover {
-    background-color: var(--hover-color);
-    color: var(--primary-color);
-}
-.provoles-selected {
-    background-color: var(--selected-color);
-    color: var(--primary-color);
-}
-
-.seats {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    -webkit-touch-callout: none; /* iOS Safari */
-    -webkit-user-select: none; /* Safari */
-    -khtml-user-select: none; /* Konqueror HTML */
-    -moz-user-select: none; /* Old versions of Firefox */
-    -ms-user-select: none; /* Internet Explorer/Edge */
-    user-select: none; /* Non-prefixed version, currently
-                                  supported by Chrome, Edge, Opera and Firefox */
-}
-
-.seat {
-    flex: 0 1 calc(25% - 1em);
-    position: relative;
-    overflow: hidden;
-    width: 1.4em;
-    max-width: 1.4em;
-    height: 1.3em;
-    max-height: 1.3em;
-    background-color: var(--accent-color);
-    margin: 4px;
-    border-top-left-radius: 50%;
-    border-top-right-radius: 50%;
-    cursor: pointer;
-    text-align: center;
-}
-
-.seat-available:hover {
-    background-color: var(--hover-color);
-}
-
-.seat-selected {
-    background-color: var(--selected-color);
-}
-
-.seat-selected:hover {
-    background-color: var(--hover-selected-color);
-}
-
-.seat-occupied {
-    background-color: var(--primary-color);
-    cursor: not-allowed;
-}
-
-.seat-text {
-    font-size: 0.8em;
-    color: #fffc;
-}
-
-.screen-container {
-    margin-top: 50px;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.screen {
-    background-color: var(--text-color);
-    height: 1em;
-    width: 30em;
-    border-bottom-right-radius: 100px;
-    border-bottom-left-radius: 100px;
-}
-
-.screen-inner {
-    background-color: var(--primary-color);
-    margin-top: 5px;
-    height: 1.5em;
-    width: 30em;
-    text-align: center;
-    border-bottom-right-radius: 100px;
-    border-bottom-left-radius: 100px;
-}
-
-.reserve-form {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-}
-
-.selected-seats {
-    background-color: var(--primary-color);
-}
-
-.selected-seats-text {
-    text-align: center;
-    height: 3em;
-    border: none;
-    color: #fffc;
-    border-top-right-radius: 10px;
-    border-top-left-radius: 10px;
-    border-bottom-right-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-.selected-seats-button {
-    margin: 10px;
-    padding: 15px 30px;
-    text-align: center;
-    text-transform: uppercase;
-    font-size: 1.1em;
-    transition: 0.5s;
-    background-size: 200% auto;
-    color: #fff;
-    border-radius: 10px;
-    display: block;
-    border: 0px;
-    box-shadow: 0px 0px 14px -7px var(--primary-color);
-    background-image: linear-gradient(45deg, #222222 0%, #383838 51%, var(--primary-color) 100%);
-    cursor: pointer;
-    touch-action: manipulation;
-}
-
-.selected-seats-button:hover {
-    background-position: right center;
-    color: #fff;
-    text-decoration: none;
-}
-
-.selected-seats-button:active {
-    transform: scale(0.95);
+    padding: 0.5em 7em 0.5em 1em;
 }
