CreatProvoli bug fix

--- a/BookingWebApplication/Views/ContentAdmins/CreateProvoli.cshtml
+++ b/BookingWebApplication/Views/ContentAdmins/CreateProvoli.cshtml
@@ -10,27 +10,25 @@
     @Html.AntiForgeryToken()
 
     <div class="form-group">
-        <label asp-for="MoviesName">Movie Name:</label>
-        <input asp-for="MoviesName" class="form-control" />
+        <label asp-for="MoviesName" class="form-label mt-4">Movie Name:</label>
+        <select asp-for="MoviesName" asp-items="ViewBag.Movies" class="form-control"></select>
         <span asp-validation-for="MoviesName" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="CinemasID">Cinema:</label>
+        <label asp-for="CinemasID" class="form-label mt-4">Cinema:</label>
         <select asp-for="CinemasID" asp-items="ViewBag.Cinemas" class="form-control"></select>
         <span asp-validation-for="CinemasID" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="ShowDateTime">Show Date and Time:</label>
+        <label asp-for="ShowDateTime" class="form-label mt-4">Show Date and Time:</label>
         <input asp-for="ShowDateTime" class="form-control" />
         <span asp-validation-for="ShowDateTime" class="text-danger"></span>
     </div>
 
-    <input asp-for="ContentAdminId" type="hidden" value="@User.Identity.Name" />
-
     <div class="form-group">
-        <input type="submit" value="Create" class="btn btn-primary" />
+        <input type="submit" value="Create" class="btn btn-secondary mt-4" />
     </div>
 </form>
 
