--- a/BookingWebApplication/Views/Home/Index.cshtml
+++ b/BookingWebApplication/Views/Home/Index.cshtml
@@ -2,7 +2,24 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div class="home-container">
+    <h1>Welcome to VelvetScreen</h1>
+
+    <p>Experience the magic of the big screen like never before with Cinematic Reserve. Your ticket to seamless movie reservations and unforgettable cinema moments.</p>
+
+    <h2>Key Features:</h2>
+    <ul>
+        <li><strong>Easy Reservation:</strong> Effortlessly browse movies and cinemas, select showtimes, and reserve tickets in a few clicks.</li>
+        <li><strong>Seat Selection:</strong> Choose the best seats with our interactive seating charts.</li>
+        <li><strong>Real-Time Availability:</strong> Get instant updates on ticket availability for stress-free planning.</li
+    </ul>
+
+    <h2>How It Works:</h2>
+    <ol>
+        <li>Visit VelvetScreen.gr</li>
+        <li>Browse movies or cinemas and select your preferred showtime.</li>
+        <li>Choose seats from the interactive chart.</li>
+        <li>Arrive at the cinema, skip the queue, and enjoy the show!</li>
+    </ol>
+    <div><p>VelvetScreen – where movie magic meets convenience. Start planning your next cinematic adventure with us!</p></div>
 </div>
