--- a/BookingWebApplication/Views/Reservation/Create.cshtml
+++ b/BookingWebApplication/Views/Reservation/Create.cshtml
@@ -1,5 +1,9 @@
 ﻿@model Tuple<Provoli, Movie, Cinema, List<Reservation>>
 
+@{
+    ViewData["Title"] = "Create";
+}
+
 <head>
     <link rel="stylesheet" href="~/css/reservations.css" asp-append-version="true" />
     <script src="~/js/reservations.js" type="text/javascript" asp-append-version="true"></script>
