--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -37,13 +37,31 @@
                                     <li class="nav-item">
                                         <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="CreateProvoli">Create Screening</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="CreateMovie">Add Movie</a>
+                                    </li>
                                 }
                         }
                         <li class="nav-item dropdown ms-auto mb-lg-8">
                             @{
                                 if (ViewBag.MySession != null)
                                 {
-                                    <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                                    if (ViewBag.UserRole.Equals("Customer"))
+                                    {
+                                        <div class="dropdown-center">
+                                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                                @ViewBag.UserName
+                                            </button>
+                                            <ul class="dropdown-menu dropdown-menu-dark dropdown-menu-end">
+                                                <li><a class="dropdown-item" asp-area=""  asp-controller="Reservation" asp-action="History">History</a></li>
+                                                <li><a class="dropdown-item" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a></li>
+                                            </ul>
+                                        </div>
+                                    }
+                                    else
+                                    {
+                                        <a class="btn btn-secondary" asp-area="" asp-controller="Account" asp-action="Logout">Log Out</a>
+                                    }
                                 }
                                 else
                                 {
