--- a/BookingWebApplication/wwwroot/css/site.css
+++ b/BookingWebApplication/wwwroot/css/site.css
@@ -74,3 +74,7 @@ footer {
 .home-container div {
     margin-top: 1em;
 }
+
+a.dropdown-item:focus {
+    background-color: var(--light-primary-color) !important;
+}
