--- a/BookingWebApplication/Views/Provoli/Index.cshtml
+++ b/BookingWebApplication/Views/Provoli/Index.cshtml
@@ -14,6 +14,7 @@
             <th>Movie Name</th>
             <th>Date & Time</th>
             <th>Available Seats</th>
+            <th>Actions</th> <!-- Added column for Actions -->
         </tr>
         @foreach (var item in Model.Item1.OrderBy(e => e.ShowDateTime))
         {
@@ -31,19 +32,17 @@
                 <td>@item.ShowDateTime</td>
                 <td>@item.Cinema.Seats</td>
                 <td>
-                    @* @if (User.IsInRole("ContentAdmin"))
-                    { *@
-                    <a asp-controller="ContentAdmin" asp-action="EditProvoli" asp-route-id="@item.Id"
-                        style="color: white; margin-left: 10px; margin-top: 10px;font-size: 20px;">Edit</a>
-                    @* }
-                    else
-                    {
-                        <span style="color: white; visibility: hidden;">Edit</span>
-                    } *@
+                    <a asp-controller="ContentAdmin" asp-action="EditProvoli"
+                       asp-route-moviesId="@item.MoviesId"
+                       asp-route-moviesName="@item.MoviesName"
+                       asp-route-cinemasId="@item.CinemasID"
+                       asp-route-showDateTime="@item.ShowDateTime"
+                       asp-route-contentAdminId="@item.ContentAdminId"
+                       style="color: white; margin-left: 10px; margin-top: 10px;font-size: 20px;">
+                        Edit
+                    </a>
                 </td>
             </tr>
         }
     </table>
 </div>
-
-
