--- a/BookingWebApplication/Views/Account/Details.cshtml
+++ b/BookingWebApplication/Views/Account/Details.cshtml
@@ -43,6 +43,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.UserName">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.UserName" class="link-secondary">Edit</a> |
+    <a asp-action="Index" class="link-secondary">Back to List</a>
 </div>
