Admin-ContentAdmin Restrictions, Restrict customer from making a reservation for the same projection

--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -41,6 +41,15 @@
                                         <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="CreateMovie">Add Movie</a>
                                     </li>
                                 }
+                                else if (ViewBag.UserRole.Equals("Admin"))
+                                {
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Index">Accounts</a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="Index">Content Admins</a>
+                                    </li>
+                                }
                         }
                         <li class="nav-item dropdown ms-auto mb-lg-8">
                             @{
