--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                                     <li class="nav-item">
                                         <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="CreateMovie">Add Movie</a>
                                     </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" asp-controller="ContentAdmin" asp-action="AddCinema">Add Cinema</a>
+                                    </li>
                                 }
                                 else if (ViewBag.UserRole.Equals("Admin"))
                                 {
