--- a/BookingWebApplication/Views/ContentAdmins/AddCinema.cshtml
+++ b/BookingWebApplication/Views/ContentAdmins/AddCinema.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Add Cinema</h2>
 
-<form asp-action="AddCinema" asp-controller="ContentAdmin" method="post">
+<form asp-action="AddCinema" asp-controller="ContentAdmins" method="post">
 
     @Html.AntiForgeryToken()
 
