--- a/BookingWebApplication/Views/Shared/_Layout.cshtml
+++ b/BookingWebApplication/Views/Shared/_Layout.cshtml
@@ -41,7 +41,7 @@
                                         <a class="nav-link" asp-area="" asp-controller="ContentAdmins" asp-action="CreateMovie">Add Movie</a>
                                     </li>
                                     <li class="nav-item">
-                                        <a class="nav-link" asp-controller="ContentAdmin" asp-action="AddCinema">Add Cinema</a>
+                                        <a class="nav-link" asp-controller="ContentAdmins" asp-action="AddCinema">Add Cinema</a>
                                     </li>
                                 }
                                 else if (ViewBag.UserRole.Equals("Admin"))
